[COZY-48] fix: collect(Collectors.toList()) -> toList() 변경 및 예외명 변경